# Cplus

./: .gitignore  CMakeLists.txt  README.md  loc
Include/Cplus/: Base.h  Config.h  Cplus.h  CrossPlatform.h  ForwardDeclarations.h  Registry.h
Include/Cplus/Base/: String.h
Include/Cplus/Container/: Container.h  List.h  Map.h  Vector.h
Include/Cplus/Debug/: Assert.h
Include/Cplus/Executor/: Executor.h
Include/Cplus/Memory/: AllocationSource.h  Allocator.h  Base.h  Config.h  Memory.h  Pool.h  StackAllocator.h
Include/Cplus/Object/: Class.h  Value.h
Include/Cplus/Platform/: Base.h
Include/Cplus/System/: Builtin.h  String.h  StringStream.h  String_Slice.h
Include/Cplus/Type/: Traits.h
Include/KAI/: Allocator.h  Base.h  Class.h  Config.h  ForwardDeclarations.h  Memory.h  Object.h  Registry.h  String.h  StringStream.h  String_Slice.h  Value.h
Include/KAI/Container/: List.h  Map.h  Vector.h
Include/KAI/Memory/: AllocationSource.h  Allocator.h  Config.h  Memory.h  Pool.h  (+1 more)
Source/: CMakeLists.txt  Debug.c
Source/Builtin/: String.c  StringSlice.c  String_Slice.c
Source/Container/: List.c  Map.c  Vector.c
Source/Memory/: Allocator.c  Memory.c  StackAllocator.c
Test/: CMakeLists.txt  TestClassBuilder.c  TestContainers.c  TestCrossPlatform.cpp  TestPlatform.c  TestStackAllocator.c  TestString.c  main.c
Test/Container/: TestList.c  TestMap.c  TestVector.c
Test/Foo/: Foo.Generated.c  Foo.Generated.h  Foo.c  Foo.interface  Foo.tau  TestFoo.c
Test/Generator/Foo/: Foo.Generated.c  Foo.Generated.h
Test/Memory/: TestAllocator.c  TestStackAllocator.c
(+19 files in other folders)
